ansible/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas-frontend
spec:
  type: NodePort
  selector:
    app: atlas-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30090
